# labonneboite-common

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  docker-compose.testing.yml  flake8.txt  mkdocs.yml  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py  sonar-project.properties
.ci/: python-tests.sh
.docker/v3.10/: Dockerfile
.docker/v3.10/entrypoints/: test.sh
ci/: python-package.sh
docker/v3.10/: Dockerfile
docker/v3.10/entrypoints/: test.sh
docs/: index.md
labonneboite_common/: chunk.py  chunk_test.py  departements.py  departements_test.py  encoding.py  encoding_test.py  siret_test.py
labonneboite_common/models/: office_mixin.py
old/: Makefile
scripts/: python_install.sh  python_package_build.sh  python_package_publish.sh  python_publish.sh  python_quality.sh
tests/: flake8.xml
