[tool.poetry]
name = "labonneboite-common"
version = "0.1.0"
description = ""
authors = ["La Bonne Boite <labonneboite@pole-emploi.fr>"]
license  = "GPL-3.0-only"
keywords = ["labonneboite_common"]
readme = "README.md"
packages = [
    { include = "labonneboite_common" }
]

[tool.poetry.dependencies]
python = "^3.6"
unidecode = "0.4.21"
sqlalchemy = "<1.4=>1.3.3"

[tool.poetry.dev-dependencies]
coverage = "6.2"
pytest = "7.0.1"
flake8 = "4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
